--- a/Css/Entete2.css
+++ b/Css/Entete2.css
@@ -2,6 +2,10 @@ body{
 margin:0;	
 }
 
+html{
+	overflow-x: hidden;
+}
+
 T1{
 	color:white;
 	font-family: "Roboto";
@@ -13,7 +17,7 @@ T1{
 }
 
 .entete{
-	background:red;
+	background:#CE1628;
 	height:98.2px;
 	width:100%;
 }
@@ -36,13 +40,13 @@ width:43px;
 }
 
 .Commandes{
-	width:160px;
+width:180px;
 margin-top: -47px;
     margin-left: 65%;
 }
 
 .Panier{
-	width:160px;
+	width:180px;
 margin-top: -48px;
     margin-left: 77%;
 }
@@ -55,8 +59,16 @@ margin-top: -48px;
 
 a{
 text-decoration:none;	
+width:200px;
 }
 
 .Backroundimage{
 	width:100%;
+}
+
+.Backroundimage2{
+	width:100%;
+position: relative;
+    bottom: 305px;
+    height: 310px;
 }
