--- a/Css/Principal.css
+++ b/Css/Principal.css
@@ -1,3 +1,7 @@
+html{
+	overflow-x: hidden;
+}
+
 .Recherche{
 	background-color:#CE1628;
 	width:934px;
@@ -8,13 +12,33 @@
 	text-align: center;
 }
 
+.Barre{
+	background-color:#CE1628;
+	width:934px;
+	height:120px;
+	    position: absolute;
+        top: 355px;
+    left: 375px;
+	text-align: center;
+}
+
+.BarreJaune{
+	background-color:#FAA61A;
+	width:146px;
+	height:12px;
+	position: relative;
+	   top: 40px;
+    left: 300px;
+}
+
 .BarreRecherche{
-    width: 50%;
+    width: 56%;
     height: 50px;
     margin-top: 90px;
     margin-right: 144px;
     border-radius: 15px;
     border: 2px solid #FAA61A;
+	
 	
 }
 .BarreRecherche:focus{
@@ -28,8 +52,42 @@
     border-radius: 15px;
     border: none;
     position: absolute;
-    bottom: 74px;
-    left: 590px;
+    bottom: 72px;
+    left: 620px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: bold;
+	font-size: 24px;
+	color:white;
+}
+
+.ButtonRestaurant{
+    background-color: #CE1628;
+    width: 25%;
+    height: 49px;
+    border-radius: 5px;
+    border: none;
+    position: absolute;
+    top: 155px;
+    left: 0px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: bold;
+	font-size: 24px;
+	color:white;
+}
+
+.ButtonPanier{
+    background-color: #CE1628;
+    width: 25%;
+    height: 49px;
+    border-radius: 5px;
+    border: none;
+    position: absolute;
+    top: 200px;
+    left: 180px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: bold;
+	font-size: 24px;
+	color:white;
 }
 
 .BlocRestaurant{	
@@ -39,7 +97,55 @@
 	margin-left: auto;
 	border: 1px solid gray;
 	box-shadow: 4px 4px 4px gray ;
-	margin-top:160px;
+	margin-top:25px;
+}
+
+.BlocPlat{	
+	height:381px;
+	width:934px;
+	margin-right: auto;
+	margin-left: auto;
+	margin-bottom:50px;
+	border: 1px solid gray;
+	box-shadow: 4px 4px 4px gray ;
+}
+
+.espace{
+margin-top:175px;
+}
+
+.espace2{
+margin-top:100px;
+}
+
+.ImageRestaurant{
+	width:246.58px;
+	height:250px;
+    margin-left: 150px;
+    margin-top: 25px;
+}
+
+.ImagePlat{
+	width:246.58px;
+	height:250px;
+    margin-left: 75px;
+    margin-top: 68px;
+}
+
+.Informations{
+position: relative;
+    left: 500px;
+    bottom: 230px;
+	font-family: 'Roboto', sans-serif;
+	height:200px;
+}
+
+.Informations2{
+    position: relative;
+    left: 475px;
+    bottom: 250px;
+	font-family: 'Roboto', sans-serif;
+	height:200px;
 }
 
 T2{
@@ -48,6 +154,51 @@ T2{
 	color: white;
 	width:711px;
 	height:49px;
+	font-family: 'Roboto', sans-serif;
+	    font-weight: bold;
 	position: relative;
     top: 75px;
+}
+
+T3{
+color:#CE1628;
+font-size:30px;	
+font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
+
+T4{
+top: 20px;
+position:relative;
+font-size:24px;	
+font-family: 'Roboto', sans-serif;
+}
+
+T5{
+top: 30px;
+position:relative;
+font-size:24px;	
+font-family: 'Roboto', sans-serif;
+}
+
+T6{
+	margin-top: 50px;
+    font-size: 37px;
+    color: white;
+    width: 711px;
+    height: 49px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    position: relative;
+    top: 35px;
+}
+
+T7{
+color:#CE1628;
+font-size:30px;	
+font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+	position: relative;
+    top: 85px;
+	right:180px;
 }
