--- a/Css/Connexion.css
+++ b/Css/Connexion.css
@@ -1,175 +1,172 @@
-body{
-background-color:#FAA61A;
+body {
+  background-color: #faa61a;
 }
 
-input{
-	height:40px;
-	width:95%;
-	border:none;
-    font-size: 17px;
+input {
+  height: 40px;
+  width: 95%;
+  border: none;
+  font-size: 17px;
 }
 
-input:focus{
-    outline: none;
+input:focus {
+  outline: none;
 }
 
-titre{
-	margin-left:210px;
-	font-family: 'Roboto', sans-serif;
-color:red;
-font-size:40px;
-font-weight: bold;
+titre {
+  margin-left: 210px;
+  font-family: "Roboto", sans-serif;
+  color: red;
+  font-size: 40px;
+  font-weight: bold;
 }
 
-texte1{
-font: 1.2em;
-font-family: 'Roboto', sans-serif;
-padding-bottom:2px;
-font-weight: bold;
+texte1 {
+  font: 1.2em;
+  font-family: "Roboto", sans-serif;
+  padding-bottom: 2px;
+  font-weight: bold;
 }
 
-.email{
-		margin-top: 10px;
-		border: 2px solid #FAA61A;
-	border-radius: 10px;
-	color:#FAA61A;
-	padding-left:10px;
+.email {
+  margin-top: 10px;
+  border: 2px solid #faa61a;
+  border-radius: 10px;
+  color: #faa61a;
+  padding-left: 10px;
 }
 
-.password{
-		margin-top: 10px;
-		border: 2px solid #FAA61A;
-	border-radius: 10px;
-		color:#FAA61A;
-			padding-left:10px;
+.password {
+  margin-top: 10px;
+  border: 2px solid #faa61a;
+  border-radius: 10px;
+  color: #faa61a;
+  padding-left: 10px;
 }
 
-.icon-connexionutilisateur{
-	size:20px;
+.icon-connexionutilisateur {
+  size: 20px;
 }
 
-.page-connexion{
-background-color:white;	
-min-width: 700px;
-max-width: 700px;
-min-height: 700px;
-max-height: 700px;
-margin-left: auto;
-margin-right: auto;
-margin-top: 3.5%;
-resize:none;
+.page-connexion {
+  background-color: white;
+  min-width: 700px;
+  max-width: 700px;
+  min-height: 700px;
+  max-height: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3.5%;
+  resize: none;
 }
 
-.page-inscription{
-background-color:white;	
-min-width: 600px;
-max-width: 600px;
-min-height: 720px;
-max-height: 720px;
-margin-left: auto;
-margin-right: auto;
-margin-top: 1.9%;
-resize:none;
-padding-top:50px;
+.page-inscription {
+  background-color: white;
+  min-width: 600px;
+  max-width: 600px;
+  min-height: 720px;
+  max-height: 720px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1.9%;
+  resize: none;
+  padding-top: 50px;
 }
 
-.page-success{
-background-color:white;	
-min-width: 600px;
-max-width: 600px;
-min-height: 220px;
-max-height: 220px;
-margin-left: auto;
-margin-right: auto;
-margin-top: 1.9%;
-resize:none;
-padding-top:50px;
+.page-success {
+  background-color: white;
+  min-width: 600px;
+  max-width: 600px;
+  min-height: 220px;
+  max-height: 220px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1.9%;
+  resize: none;
+  padding-top: 50px;
 }
 
-.input-inscription{
-			border: 2px solid #FAA61A;
-	border-radius: 10px;
-		height:30px;
-	width:95%;
-	margin-top:5px;
+.input-inscription {
+  border: 2px solid #faa61a;
+  border-radius: 10px;
+  height: 100px;
+  margin-top: 5px;
 }
 
-.logo{
-    margin-left: 120px;
-    margin-top: 100px;
-    height: 200px;
+.logo {
+  margin-left: 120px;
+  margin-top: 100px;
+  height: 200px;
 }
 
-.formulaire-connexion{
-	margin-top: 30px;
-	margin-left: 100px;
-	width:500px;
+.formulaire-connexion {
+  margin-top: 30px;
+  margin-left: 100px;
+  width: 500px;
 }
 
-.Role{
-height: 16px;
-    width: 37px;
-    size: 50px;
-    accent-color : #FAA61A;
-	margin-bottom:20px;
+.Role {
+  height: 16px;
+  width: 37px;
+  size: 50px;
+  accent-color: #faa61a;
+  margin-bottom: 20px;
 }
 
-.formulaire-inscription{
-	margin-top: 30px;
-	margin-left: 110px;
-	width:400px;
+.formulaire-inscription {
+  margin-top: 30px;
+  margin-left: 110px;
+  width: 400px;
 }
 
-
-.inscrire{
-	background-color:#FAA61A;
-	border-radius: 0px;
-	width:240px;
-	margin-right:20px;
-	color : white;
-	margin-top:40px;
-	height:40px;
-	font: 1.2em;
-	font-family: 'Roboto', sans-serif;
-    margin-top: -40px;
+.inscrire {
+  background-color: #faa61a;
+  border-radius: 0px;
+  width: 240px;
+  margin-right: 20px;
+  color: white;
+  margin-top: 40px;
+  height: 40px;
+  font: 1.2em;
+  font-family: "Roboto", sans-serif;
+  margin-top: -40px;
 }
 
-.inscrire2{
-	background-color:red;
-	border-radius: 0px;
-	width:180px;
-	border-color:red;
-    color : white;
-	margin-top:40px;
-		height:40px;
-		font: 1.2em;
-		font-family: 'Roboto', sans-serif;
-			margin-left: 205px;
-		
+.inscrire2 {
+  background-color: red;
+  border-radius: 0px;
+  width: 180px;
+  border-color: red;
+  color: white;
+  margin-top: 40px;
+  height: 40px;
+  font: 1.2em;
+  font-family: "Roboto", sans-serif;
+  margin-left: 205px;
 }
 
-.Retour{
-	background-color:#FAA61A;
-	border-radius: 0px;
-	width:180px;
-	margin-right:20px;
-	color : white;
-	margin-top:-40px;
-	height:40px;
-	font: 1.2em;
-	position:absolute;
-	font-family: 'Roboto', sans-serif;
+.Retour {
+  background-color: #faa61a;
+  border-radius: 0px;
+  width: 180px;
+  margin-right: 20px;
+  color: white;
+  margin-top: -40px;
+  height: 40px;
+  font: 1.2em;
+  position: absolute;
+  font-family: "Roboto", sans-serif;
 }
 
-.connecter{
-	background-color:red;
-	border-radius: 0px;
-	width:240px;
-	border-color:red;
-    color : white;
-	margin-top:40px;
-		height:40px;
-		font: 1.2em;
-	font-family: 'Roboto', sans-serif;
-	margin-left: 260px;
+.connecter {
+  background-color: red;
+  border-radius: 0px;
+  width: 240px;
+  border-color: red;
+  color: white;
+  margin-top: 40px;
+  height: 40px;
+  font: 1.2em;
+  font-family: "Roboto", sans-serif;
+  margin-left: 260px;
 }
