--- a/Css/Principal3.css
+++ b/Css/Principal3.css
@@ -39,7 +39,7 @@ background-color: #CE1628;
     margin-right: 144px;
     border-radius: 15px;
     border: 2px solid #FAA61A;
-	
+	font-size: 25px;
 	
 }
 .BarreRecherche:focus{
@@ -53,7 +53,7 @@ background-color: #CE1628;
     border-radius: 15px;
     border: none;
     position: absolute;
-    bottom: 72px;
+    bottom: 73px;
     left: 620px;
 	font-family: 'Roboto', sans-serif;
 	font-weight: bold;
@@ -77,14 +77,14 @@ background-color: #CE1628;
 }
 
 .ButtonPanier{
-background-color: #CE1628;
+    background-color: #CE1628;
     width: 20%;
     height: 35px;
     border-radius: 2px;
     border: none;
-    position: absolute;
-    top: 129px;
-    left: 180px;
+    position: relative;
+    bottom: 255px;
+    left: 423px;
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
     font-size: 19px;
@@ -185,6 +185,31 @@ position: relative;
 	height:200px;
 }
 
+.PlusMoins{
+      background-color: #FAA61A;
+    width: 47px;
+    height: 47px;
+    border-radius: 50px;
+    border: none;
+    position: relative;
+    bottom: 253px;
+    left: 430px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+    color: white;
+    margin-right: 50px;
+}
+
+.quantite{
+     position: relative;
+    bottom: 253px;
+    left: 406px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+}
+
 T2{
 	margin-top:50px;
 	font-size: 37px;
@@ -231,13 +256,13 @@ T6{
 }
 
 T7{
-color:#CE1628;
-font-size:30px;	
-font-family: 'Roboto', sans-serif;
+color: #CE1628;
+    font-size: 30px;
+    font-family: 'Roboto', sans-serif;
     font-weight: bold;
-	position: relative;
-    top: 85px;
-	right:180px;
+    position: relative;
+    bottom: 310px;
+    left: 475px;
 }
 T8{
 	color:#CE1628;
