--- a/Css/Livreur.css
+++ b/Css/Livreur.css
@@ -40,7 +40,7 @@ html {
   font-weight: bolder;
   width: 100%;
 
-  height: 150px;
+  height: 220px;
   text-align: center;
 }
 .infos_restau {
@@ -64,7 +64,7 @@ html {
   border: 0px;
   border-radius: 25px;
   width: 200px;
-  height: 55px;
+  height: 50px;
 }
 .button-red {
   background-color: #ce1628;
@@ -107,9 +107,7 @@ html {
 
 .BarreRecherche {
   width: 56%;
-  height: 50px;
-  margin-top: 90px;
-  margin-right: 144px;
+  height: 45px;
   border-radius: 15px;
   border: 2px solid #faa61a;
 }
@@ -120,15 +118,13 @@ html {
 .BouttonRecherche {
   background-color: #faa61a;
   width: 20%;
-  height: 56px;
+  height: 45px;
   border-radius: 15px;
   border: none;
-  position: absolute;
-  bottom: 72px;
-  left: 620px;
+  position: relative;
+  left: -25px;
   font-family: "Roboto", sans-serif;
-  font-weight: bold;
-  font-size: 24px;
+  font-size: 20px;
   color: white;
 }
 
